--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="index.js" charset="utf-8" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
-    <title>Scrollable json div</title>
+    <title>JSON file editor</title>
   </head>
   <body>
     <div id="loadFile" onclick="loadFile()">
